# JitSpMM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
csrc/: mm_to_csrbin.cpp  spmm.cpp
csrc/include/: MergeSplit.hpp  NnzSplit.hpp  RowSplit.hpp  Scalar.hpp  SpMat.h
data/1138_bus/: 1138_bus.csrbin
docker/: Dockerfile
